kubernetes/deploy/monitoring/monitoring/victoria-metrics/clusters/bastion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
  namespace: monitoring
spec:
  ingressClassName: tailscale
  rules:
    - host: &host vmsingle
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vmsingle-victoria
                port:
                  name: http
  tls:
    - hosts:
        - *host
